# bullet2-sharp-mobile

./: .gitignore  .gitmodules  README.md
src/Android/jni/: Android.mk  Application.mk
src/BulletSharpPInvoke/: BulletSharpPInvoke.csproj  BulletSharpPInvoke.sln  MathUtil.cs  Native.cs  SuppressUnmanagedCodeSecurityAttribute.cs  TaskHelper.cs  UnmanagedMemoryStream.cs  Utilities.cs
src/BulletSharpPInvoke/Collision/: ActivatingCollisionAlgorithm.cs  AxisSweep3.cs  Box2DBox2DCollisionAlgorithm.cs  Box2DShape.cs  BoxBoxCollisionAlgorithm.cs  BoxCollision.cs  BoxShape.cs  BroadphaseInterface.cs  BroadphaseProxy.cs  BvhTriangleMeshShape.cs  CapsuleShape.cs  CollisionAlgorithm.cs  CollisionCreateFunc.cs  CollisionObjectWrapper.cs  CollisionShape.cs  CollisionWorld.cs  CompoundCollisionAlgorithm.cs  CompoundCompoundCollisionAlgorithm.cs  CompoundShape.cs  ConcaveShape.cs  ConeShape.cs  Convex2DConvex2DAlgorithm.cs  Convex2DShape.cs  ConvexConcaveCollisionAlgorithm.cs  ConvexHullShape.cs  ConvexInternalShape.cs  ConvexPenetrationDepthSolver.cs  ConvexPlaneCollisionAlgorithm.cs  ConvexPolyhedron.cs  ConvexShape.cs  ConvexTriangleMeshShape.cs  CylinderShape.cs  DbvtBroadphase.cs  DefaultCollisionConfiguration.cs  DiscreteCollisionDetectorInterface.cs  Dispatcher.cs  EmptyCollisionAlgorithm.cs  GhostObject.cs  GjkPairDetector.cs  HeightfieldShape.cs  (+26 more)
src/BulletSharpPInvoke/Collision/GImpact/: BoxCollision.cs  GImpactBvh.cs  GImpactCollisionAlgorithm.cs  GImpactShape.cs
src/BulletSharpPInvoke/Dynamics/: ActionInterface.cs  CharacterControllerInterface.cs  CollisionConfiguration.cs  CollisionDispatcher.cs  CollisionObject.cs  ConeTwistConstraint.cs  ConstraintSolver.cs  ContactSolverInfo.cs  DiscreteDynamicsWorld.cs  DynamicsWorld.cs  FixedConstraint.cs  GearConstraint.cs  Generic6DofConstraint.cs  Generic6DofSpringConstraint.cs  Hinge2Constraint.cs  HingeConstraint.cs  IActionInterface.cs  KinematicCharacterController.cs  NncgConstraintSolver.cs  Point2PointConstraint.cs  RaycastVehicle.cs  RigidBody.cs  RigidBodyConstructionInfo.cs  SequentialImpulseConstraintSolver.cs  SliderConstraint.cs  TypedConstraint.cs  UniversalConstraint.cs  VehicleRaycaster.cs  WheelInfo.cs
src/BulletSharpPInvoke/Extras/: BulletFile.cs  BulletWorldImporter.cs  BulletXmlWorldImporter.cs  WorldImporter.cs  bFile.cs
src/BulletSharpPInvoke/LinearMath/: AlignedBroadphasePairArray.cs  AlignedCollisionObjectArray.cs  AlignedCollisionShapeArray.cs  AlignedManifoldArray.cs  AlignedVector3Array.cs  Collections.cs  DebugDraw.cs  DefaultMotionState.cs  GeometryUtil.cs  IDebugDraw.cs  MotionState.cs  PolarDecomposition.cs  Serializer.cs  SharpMotionState.cs  TransformUtil.cs
src/BulletSharpPInvoke/MultiThreaded/: ParallelConstraintSolver.cs  SpuCollisionTaskProcess.cs  SpuGatheringCollisionDispatcher.cs  SpuGatheringCollisionTask.cs  ThreadSupportInterface.cs  Win32ThreadSupport.cs
src/BulletSharpPInvoke/Properties/: AssemblyInfo.cs
src/BulletSharpPInvoke/Resources/: Strings.Designer.cs
src/BulletSharpPInvoke/SoftBody/: SoftBody.cs  SoftBodyHelpers.cs  SoftBodyRigidBodyCollisionConfiguration.cs  SoftRigidDynamicsWorld.cs
src/Linux/: Makefile
src/PhysicsLayer/: PhysicsLayer.sln
src/PhysicsLayer/PhysicsLayer/: PhysicsLayer.cpp  PhysicsLayer.h  PhysicsLayer.vcxproj  PhysicsLayer.vcxproj.filters  ReadMe.txt  stdafx.cpp
src/VHACDSharp/: ConvexHullMesh.cs  VHACDSharp.csproj  VhacdMesh.cs
src/VHACDSharp/Properties/: AssemblyInfo.cs
src/VHACD_Lib/VHACD/: VHACD.sln  VHACD.vcxproj  VHACD.vcxproj.filters  wrapper.cpp  wrapper.h
src/VHACD_Lib/inc/: vhacdHACD.h
src/VHACD_Lib/src/: vhacdHACD.cpp
src/Windows/: build-bullet-windows.bat  build-libbulletc-windows.bat  build-vhacd-windows.bat
src/bullet-2.82-r2704/src/BulletCollision/CollisionShapes/: btBox2dShape.h
src/bullet-2.82-r2704/src/LinearMath/: btQuickprof.cpp  btScalar.h  btVector3.cpp  btVector3.h
src/iOS/bulletc/: build.sh
src/iOS/bulletc/bulletc.xcodeproj/: project.pbxproj
src/iOS/bulletc/bulletc.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
src/iOS/bulletc/bulletc.xcodeproj/project.xcworkspace/xcshareddata/: bulletc.xccheckout
src/iOS/bulletc/bulletc.xcodeproj/xcuserdata/sugar.xcuserdatad/xcschemes/: bulletc.xcscheme  xcschememanagement.plist
src/iOS/bulletc/bulletcTests/: bulletcTests-Info.plist  bulletcTests.m
src/libbulletc/: CMakeLists.txt  libbulletc.sln  libbulletc.vcxproj  libbulletc.vcxproj.filters
src/libbulletc/src/: SharpMotionState.cpp  SharpMotionState.h  SpuCollisionTaskProcess_wrap.cpp  SpuCollisionTaskProcess_wrap.h  SpuGatheringCollisionDispatcher_wrap.cpp  SpuGatheringCollisionDispatcher_wrap.h  SpuGatheringCollisionTask_wrap.cpp  SpuGatheringCollisionTask_wrap.h  Win32ThreadSupport_wrap.cpp  Win32ThreadSupport_wrap.h  btActionInterface_wrap.cpp  btActionInterface_wrap.h  btAlignedBroadphasePairArray_wrap.cpp  btAlignedBroadphasePairArray_wrap.h  btAlignedCollisionObjectArray_wrap.cpp  btAlignedCollisionObjectArray_wrap.h  btAlignedCollisionShapeArray_wrap.cpp  btAlignedCollisionShapeArray_wrap.h  btAlignedManifoldArray_wrap.cpp  btAlignedManifoldArray_wrap.h  btAxisSweep3_wrap.cpp  btAxisSweep3_wrap.h  btBox2dBox2dCollisionAlgorithm_wrap.cpp  btBox2dBox2dCollisionAlgorithm_wrap.h  btBoxBoxCollisionAlgorithm_wrap.cpp  btBoxBoxCollisionAlgorithm_wrap.h  btBoxCollision_wrap.cpp  btBoxCollision_wrap.h  btBoxShape_wrap.cpp  btBoxShape_wrap.h  btBroadphaseInterface_wrap.cpp  btBroadphaseInterface_wrap.h  btBroadphaseProxy_wrap.cpp  btBroadphaseProxy_wrap.h  btBulletFile_wrap.cpp  btBulletFile_wrap.h  btBulletWorldImporter_wrap.cpp  btBulletWorldImporter_wrap.h  btBulletXmlWorldImporter_wrap.cpp  btBulletXmlWorldImporter_wrap.h  (+189 more)
src/libbulletc/test/: bulletctest.cpp  bulletctest.sln  bulletctest.vcxproj  bulletctest.vcxproj.filters
src/macOS/: Makefile
